charts/synology/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: synology
spec:
  type: ExternalName
  externalName: 10.0.0.200
  ports:
    - port: 443
      protocol: TCP
